# visao

./: README.md
estrutura-suporte/: ChapaCameras.stl  SuporteCameras_v2.stl  suporte_v0.fcstd  suporte_v1.fcstd
matlab/circles/: circles_rt.m
matlab/sift/: sift_test.m
matlab/stereo-depth-estimation/: Resultado  calib_01_Acq02.mat  calibrate_script.m  example_00.m  resFig1.fig  resFig2.fig  resFig3.fig
matlab/surf/: surf_01.m
pcis/placaCtrlServosAtmega/: Last Loaded tl074.DBK  placaCtrlServosAtmega.dsn  tl074.dsn
src/boostThreads/: CMakeLists.txt  main.cpp
src/cascade_gpu/: CMakeLists.txt
src/circles-bar/: CMakeLists.txt
src/circles-cam/: CMakeLists.txt
src/cloud-save-cv-example/: CMakeLists.txt  extrinsics.yml  intrinsics.yml  stereo_match.cpp
src/dlib_face/: CMakeLists.txt
src/dlib_face/src/: face-example.cpp  face.cpp
src/face-detection/: CMakeLists.txt
src/gpu/: CMakeLists.txt  gpu.cpp
src/inmoov_qt/: CMakeLists.txt  ProtocoloComunicacao.txt  main.ui
src/inmoov_qt/src/: Communication.cpp  Communication.h  FaceDetection.cpp  FaceDetection.h  HeadTracking.cpp  HeadTracking.h  SensorTread.cpp  SensorTread.h  SingleCapture.cpp  StereoVision.cpp  StereoVision.h  inmoov_qt.cpp  inmoov_qt.ui  main.cpp  remotecontrolwindow.cpp  remotecontrolwindow.h  remotecontrolwindow.ui
src/inmoov_qt/src/robot/: Head.cpp  Head.h
src/personDetector/: CMakeLists.txt
src/sobel/: CMakeLists.txt
src/stereocalib/: CMakeLists.txt  main.cpp
src/surf/: CMakeLists.txt
visao-c/edge/: marr.c  sobel.c
visao-matlab/: edge_detector.m
visao-matlab/camera-calibration/: acquiStereo.m  testSemObjeto0  testSemObjeto1  testSemObjeto10  testSemObjeto11  testSemObjeto12  testSemObjeto13  testSemObjeto14  testSemObjeto2  testSemObjeto3  testSemObjeto4  testSemObjeto5  testSemObjeto6  testSemObjeto7  testSemObjeto8  testSemObjeto9
visao-matlab/k-means/: kmeans_clusterization.m
visao-matlab/sift/: 2.xcf  sift_test_2.m
visao-matlab/stereo-depth-estimation/: calibrationSession.mat  disparity_only.m  distanciaCirculo.m  resFig0.fig  testAcq_Dir0  testAcq_Dir10  testAcq_Dir14  testAcq_Dir16  testAcq_Dir20  testAcq_Dir21  testAcq_Dir22  testAcq_Dir24  testAcq_Dir25  testAcq_Dir28  testAcq_Dir29  testAcq_Dir5  testAcq_Dir6  testAcq_Dir7  testAcq_Dir9  testAcq_Esq0  testAcq_Esq10  testAcq_Esq14  testAcq_Esq16  testAcq_Esq20  testAcq_Esq21  testAcq_Esq22  testAcq_Esq24  testAcq_Esq25  testAcq_Esq28  (+10 more)
(+311 files in other folders)
